Almost finished the talk

--- a/MelbDjango/cluedo/index.html
+++ b/MelbDjango/cluedo/index.html
@@ -29,7 +29,7 @@
         <!-- Splash -->
                                 <section data-external="slides/0010_splash.html"></section>
         <section data-external="slides/0020_title.html"></section>
-        <section data-external-replace="slides/0030_intro.html"></section>
+        <!-- <section data-external-replace="slides/0030_intro.html"></section> -->
         <section data-external-replace="slides/0040_cluedo.html"></section>
         <section data-external-replace="slides/0050_tasks.html"></section>
         <section data-external-replace="slides/0060_performance.html"></section>
@@ -74,7 +74,7 @@
                  });
 
      Reveal.addEventListener('ready', function(event) {
-       Reveal.slide(38)
+       // Reveal.slide(20)
      })
                 </script>
 
