--- a/MelbDjango/cluedo/slides/0020_title.html
+++ b/MelbDjango/cluedo/slides/0020_title.html
@@ -1,7 +1,7 @@
 <div style="text-align: left">
-  <h1>An API</h1>
-  <h1>Performance</h1>
-  <h1>Mystery</h1>
+  <h3>An API</h3>
+  <h3>Performance</h3>
+  <h3>Mystery</h3>
 </div>
 <div class="compact">
   <div><small>Luke Hodkinson</small></div>
@@ -10,23 +10,23 @@
 </div>
 <aside class="notes">
   <p>
-    Hello everyone, and thanks to MelbDjango for having me again, it's
-    a pleasure.
+    Thank you Bec. Hello everyone! *Puff on pipe*
   </p>
   <p>
-    The last time I spoke here I described my efforts to migrate one
-    of our products at aBAS from a good old fashioned WSGI gunicorn
-    based system, to a sleek, new, futuristic Django Channels
-    implementation.
+    So, what is this talk all about? Well, it's about two things very
+    dear to me: an over-obsession with software performance, and the
+    classic 1940s murder mystery boardgame, Cluedo.
   </p>
   <p>
-    Since then I've iced that partially completed cake, and sent it
-    out into the harsh realities of our production environment.
-  </p>
-  <p>
-    So today I'm going to talk you through how I went about deploying
-    our Django Channels enabled application to Heroku, and also about
-    a new Django package to leverage Channels as a background task
-    queue.
+    Yes, a talk about the dieing art of performance analysis. At
+    Uptick one of our API endpoints had one foot in the grave. With
+    performance so bad, we were crying bloody murder.
+
+    When it comes to performance analysis one can't just take a wild
+    stab in the dark, no, we brought to bear a more sophisticated
+    weapon of choice.
+
+    I'll try and keep this talk short and sharp, so I'll stop killing
+    time and just get on with it.
   </p>
 </aside>
