--- a/MelbDjango/cluedo/slides/0040_cluedo.html
+++ b/MelbDjango/cluedo/slides/0040_cluedo.html
@@ -1,18 +1,29 @@
 <section>
-  <h1>Cluedo</h1>
-  <h3>The Classic Mystery Game</h3>
+  <img src="./media/popularity.png" />
   <aside class="notes">
-    TODO
+    <p>
+      While I was writing this talk I got to wondering how many people
+      would have played Cluedo. So, I took a look at Google Trends. It
+      would seem that Christmas is Cluedo's time to shine, since 2004
+      at least. Given we're in November, this is statistically almost
+      the perfect time for a Cluedo themed talk. But for those who
+      perhaps aren't so familiar with Cluedo, let's start with a brief
+      refresher.
+    </p>
   </aside>
 </section>
 
 <section>
-  <img src="./media/popularity.png" />
+  <h1>Cluedo</h1>
+  <h3>The Classic Mystery Game</h3>
   <aside class="notes">
-    notion of solving a murder. TODO. Given it was invented in Britain in the
-    1950s I was curious about how popular Cluedo remains today. Google Trends
-    shows that it enjoys a regular resurgence each Christmas, so we're almost
-    time for another peak, a serendipitous time to be delivering this talk.
+    <p>
+      Invented by a British pianist, the game is set as a murder
+      mystery which takes place at a dinner party held at the Grand
+      Tudor Mansion. The game was originally called Murder, but Hasbro
+      Entertainment thought that a little provocative, and thus they
+      chose Cluedo, a portmanteau of the words Clue and Ludo.
+    </p>
   </aside>
 </section>
 
@@ -32,10 +43,13 @@
     </ul>
   </div>
   <aside class="notes">
-    Besides a board, the
-    game comes with three decks of cards. The first deck consists of the
-    suspects. There are six in total, each with their own distinctive color. ...
-    And of course, Colonel Mustard; the namesake of my persona this evening.
+    <p>
+      The main instruments of the game are three decks of cards, the
+      first of which is the suite of suspects. There are cards to
+      represent all of these characters, including the notorious Colonel
+      Mustard, who, of course, is the namesake of my persona this
+      evening.
+    </p>
   </aside>
 </section>
 
@@ -58,8 +72,10 @@
     </ul>
   </div>
   <aside class="notes">
-    The second deck of cards consists of the locations. Each of the nine
-    locations correspondes to an area on the board.
+    <p>
+      The second deck is that of the potential locations of the
+      killing, each corresponding to a room on the playing board.
+    </p>
   </aside>
 </section>
 
@@ -79,8 +95,9 @@
     </ul>
   </div>
   <aside class="notes">
-    Lastly, there is a deck to represent the murder weapons, with five six
-    options available.
+    <p>
+      The third deck is that of the murder weapons. TODO
+    </p>
   </aside>
 </section>
 
@@ -98,19 +115,26 @@
     <h2>?</h2>
   </div>
   <aside class="notes">
-    At the beginning of the game, each deck is shuffled, and one of each
-    category of card is selected at random, and in secret, and concealed in an
-    envelope. This is the murder, and it is the player's responsibility to
-    deduce the contents of the envelope.
+    <p>
+      At the beginning of the game each of these decks are
+      independently shuffled. Without any player seeing the faces of
+      the cards, one from each deck is chosen at random and concealed
+      within an envelope.
+    </p>
   </aside>
 </section>
 
 <section>
   <img src="./media/cluedo-board.png" />
   <aside class="notes">
-    By moving their player token from room to room, on their turn players may
-    ask questions of their opponents, gradually forming theories about the trio
-    of cards in the envelope.
+    <p>
+      This envelope is placed at the center of the board. All
+      remaining cards are now shuffled together, and dealt evenly to
+      the players, forming the players’ hands. Play then commences in
+      a turn by turn basis, where each player attempts to be the first
+      to deduce the content of the central envelope. This is achieved
+      by asking judicious questions of their fellow players.
+    </p>
   </aside>
 </section>
 
@@ -119,19 +143,25 @@
   <p>... in the library ...</p>
   <p>... with the candlestick!</p>
   <aside class="notes">
-    And this of course leads to the classic Cluedo catch phrase... At this stage
-    a player has either guessed correctly and wins, or has chosen poorly, and is
-    now out of the game.
+    <p>
+      When ready, players may make a guess in the form of the famous
+      phrase which goes something like: "Professor Plum, in the
+      library, with the candlestick". If they are correct, they have
+      win. But if they chose poorly, they forfeit any chance to guess
+      again and are effectively eliminated from the game.
+    </p>
   </aside>
 </section>
 
 <section>
   <img src="./media/notes.png" />
   <aside class="notes">
-    Every game leverages different skills. Some games need the ability to bluff
-    one's opponents, in others luck is the greatest ally. In the game of Cluedo,
-    the winner is determined by one's ability to take notes. Advanced note
-    taking strategies have been devised by many players, a testament to how
-    geeky Cluedo is, and why I love it so.
+    <p>
+      This, I think, is my favorite thing about Cluedo: In the world
+      of Cluedo, the victor is decided principally by the one who
+      takes the best notes. This game is all about note taking. It's
+      not the greatest selling point for a boardgame, but it's a lot
+      more fun than it sounds.
+    </p>
   </aside>
 </section>
