--- a/MelbDjango/cluedo/slides/0100_reveal.html
+++ b/MelbDjango/cluedo/slides/0100_reveal.html
@@ -16,16 +16,38 @@
       </div>
     </div>
   </div>
+  <aside class="notes">
+    <p>
+      On it's way to taking a full second each time the endpoint was
+      called, the final suspect has probably wasted days of CPU time
+      for us. It must have surely been for something important, right?
+      Something worthy? Let's have a look, shall we.
+    </p>
+  </aside>
 </section>
 
 <section>
   <h1>?</h1>
+  <aside class="notes">
+    <p>
+      Pluralisation... adding "s"s to words. Sometimes taking an "s"
+      away. Why, in the world, would JSON-API be spending almost a
+      full second doing this?
+    </p>
+  </aside>
 </section>
 
-<section>
+<Section>
   <div class="center" style="width: 80%">
     <img src="./media/wf-inflection-flamegraph.svg" />
   </div>
+  <aside class="notes">
+    <p>
+      Looking briefly a the flamegraph we can see the calls going out
+      to the Python inflection package at the top there. So let's have
+      a look at the source of those calls.
+    </p>
+  </aside>
 </section>
 
 <section>
@@ -49,6 +71,20 @@ def get_resource_type_from_included_serializer(self):
                 return get_resource_type_from_serializer(includes[field])
     return None
   </code></pre>
+  <aside class="notes">
+    <p>
+      It's in a function called
+      "get_resource_type_from_included_serializer", and it appears to
+      be trying to create a default name for included models on
+      JSONAPI serializers. It takes the field name, and calls
+      "inflection" to prepare a singular and plural form. This costs
+      us a bucketload of time.
+    </p>
+    <p>
+      Instead of doing that every time, I added in another good old
+      fashion lookup table and immediately resolved the problem.
+    </p>
+  </aside>
 </section>
 
 <section>
