A little more on Cluedo

--- a/MelbDjango/cluedo/slides/0040_cluedo.html
+++ b/MelbDjango/cluedo/slides/0040_cluedo.html
@@ -154,14 +154,25 @@
 </section>
 
 <section>
+  <p>Add pictures of poker, backgammon, and monopoly.</p>
+  <aside class="notes">
+    <p>
+      Every game has a particular skill required of the players to
+      win.  In Poker one has to be able to bluff. Backgammon is a
+      combination of strategy and luck. And Monopoly requires one to
+      be prepared to lost all one's friends.
+    </p>
+  </aside>
+</section>
+
+<section>
   <img src="./media/notes.png" />
   <aside class="notes">
     <p>
-      This, I think, is my favorite thing about Cluedo: In the world
-      of Cluedo, the victor is decided principally by the one who
-      takes the best notes. This game is all about note taking. It's
-      not the greatest selling point for a boardgame, but it's a lot
-      more fun than it sounds.
+      In the world of Cluedo, the victor is decided principally by the
+      one who takes the best notes. This game is all about note
+      taking. Players come up with vast and comprehensive note taking
+      sheets in order to gain an edge.
     </p>
   </aside>
 </section>
