--- a/MelbDjango/cluedo/slides/0020_title.html
+++ b/MelbDjango/cluedo/slides/0020_title.html
@@ -1,7 +1,6 @@
 <div style="text-align: left">
-  <h3>An API</h3>
-  <h3>Performance</h3>
-  <h3>Mystery</h3>
+  <h2 style="font-weight: bold" class="primary">Killing Time</h2>
+  <p>API Performance and Cluedo</p>
 </div>
 <div class="compact">
   <div><small>Luke Hodkinson</small></div>
@@ -10,23 +9,24 @@
 </div>
 <aside class="notes">
   <p>
-    Thank you Bec. Hello everyone! *Puff on pipe*
+    Hello everyone, thank you all for having me this evening.
   </p>
   <p>
-    So, what is this talk all about? Well, it's about two things very
-    dear to me: an over-obsession with software performance, and the
-    classic 1940s murder mystery boardgame, Cluedo.
+    This talk is about two things very dear to me: excessively
+    worrying about software performance, and the classic 1940s murder
+    mystery boardgame, Cluedo. At Uptick we found that one of our
+    products had developed a severe performance issue for one of its
+    endpoints. I ended up digging into the supporting Django libraries
+    we use and found some pretty interesting/alarming results. So I'll
+    be talking a bit about our products, the libraries we use, and the
+    tool leveraged to dig into the performance issue.
   </p>
   <p>
-    Yes, a talk about the dieing art of performance analysis. At
-    Uptick one of our API endpoints had one foot in the grave. With
-    performance so bad, we were crying bloody murder.
-
-    When it comes to performance analysis one can't just take a wild
-    stab in the dark, no, we brought to bear a more sophisticated
-    weapon of choice.
-
-    I'll try and keep this talk short and sharp, so I'll stop killing
-    time and just get on with it.
+    The marriage of Cluedo with this talk comes primarily in the form
+    of a little game we'll all play about half way in. I'll be asking
+    you to have a guess about what you think the cause of our
+    performance issue was, and the closest guess will be taking away
+    this copy of Cluedo provided by CommonCode. So thank you very much
+    to CommonCode.
   </p>
 </aside>
