Add a slide about games

--- a/MelbDjango/cluedo/index.html
+++ b/MelbDjango/cluedo/index.html
@@ -74,7 +74,7 @@
       });
 
       Reveal.addEventListener('ready', function(event) {
-	// Reveal.slide(20)
+	Reveal.slide(0)
       })
     </script>
 
