--- a/MelbDjango/cluedo/slides/0040_cluedo.html
+++ b/MelbDjango/cluedo/slides/0040_cluedo.html
@@ -154,13 +154,17 @@
 </section>
 
 <section>
-  <p>Add pictures of poker, backgammon, and monopoly.</p>
+  <div style="position: relative; width: 50rem; height: 50rem;">
+    <img style="position: absolute; left: 0rem; top: 0rem" src="./media/poker.jpg" />
+    <img style="position: absolute; left: 20rem; top: 10rem" src="./media/backgammon.gif" />
+    <img style="width: 20rem; position: absolute; left: 40rem; top: 20rem" src="./media/monopoly.jpg" />
+  </div>
   <aside class="notes">
     <p>
       Every game has a particular skill required of the players to
       win.  In Poker one has to be able to bluff. Backgammon is a
       combination of strategy and luck. And Monopoly requires one to
-      be prepared to lost all one's friends.
+      be prepared to lose all of one's friends and family.
     </p>
   </aside>
 </section>
