--- a/MelbDjango/cluedo/slides/0050_tasks.html
+++ b/MelbDjango/cluedo/slides/0050_tasks.html
@@ -70,7 +70,8 @@
   </div>
   <aside class="notes">
     <p>
-      These two packages do most of the heavy lifting for us. The
+      Workforce is written, of course, using Django, but most of the
+      heavy lifting in our API is carreid by these two packages. The
       first I'm sure will be very familiar to you, Django Rest
       Framework, the ubiquitous RESTful API library for Django. The
       second may not be so familiar. An extension to DRF, Django Rest
